cmake_minimum_required(VERSION 2.8)

SET(PROJ_NAME "AdonEngine")
SET(EXECUTABLE_NAME "Test")

SET(PROJ_PATH ${CMAKE_SOURCE_DIR})
SET(PROJ_OUT_PATH ${CMAKE_BINARY_DIR})
SET(PROJ_TEST ${PROJ_PATH}/test)
SET(PROJ_GRAPHICS_INCLUDE_PATH ${PROJ_PATH}/include/Graphics)
SET(PROJ_GRAPHICS_SOURCE_PATH ${PROJ_PATH}/src/Graphics)
SET(PROJ_NETWORK_INCLUDE_PATH ${PROJ_PATH}/include/Network)
SET(PROJ_NETWORK_SOURCE_PATH ${PROJ_PATH}/src/Network)
SET(LIB_DESTINATION ${PROJ_PATH}/lib)

SET(PROJ_INCLUDES "deps/GLEW" "deps/GLFW" "include" "include/Graphics" "include/Network")

SET(PROJ_LIBRARIES ${PROJ_PATH}/deps/GLEW/glew32s.lib ${PROJ_PATH}/deps/GLFW/glfw3.lib)
SET(ADON_LIBRARY ${PROJ_PATH}/lib/AdonEngine.lib)

SET(GLFW_LIB ${PROJ_PATH}/deps/GLFW/glfw3.lib)
SET(GLEW_LIB ${PROJ_PATH}/deps/GLEW/glew32s.lib)

FIND_PACKAGE(OpenGL)

### ----- Adon Engine -----###

project(${PROJ_NAME})

INCLUDE_DIRECTORIES(${PROJ_INCLUDES})
LINK_DIRECTORIES(${PROJ_LIBRARIES})

FILE(GLOB SRC ${PROJ_GRAPHICS_SOURCE_PATH}/*.cc)
FILE(GLOB HEAD ${PROJ_GRAPHICS_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSGRAPHICS ${SRC} ${HEAD})
SOURCE_GROUP(Graphics FILES ${SRCSGRAPHICS})

FILE(GLOB SRCNET ${PROJ_NETWORK_SOURCE_PATH}/*.cc)
FILE(GLOB HEADNET ${PROJ_NETWORK_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSNETWORK ${SRCNET} ${HEADNET})
SOURCE_GROUP(Network FILES ${SRCSNETWORK})

LIST(APPEND ALLSRCS ${SRCSGRAPHICS} ${SRCSNETWORK})

add_library(${PROJ_NAME} ${ALLSRCS})

SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES LINKER_LANGUAGE C++)

#add_custom_target(combined ALL COMMAND ${CMAKE_AR} rc ${PROJ_NAME}.lib $<TARGET_FILE:${GLEW_LIB}> $<TARGET_FILE:${GLFW_LIB}>)

#TARGET_LINK_LIBRARIES(${PROJ_NAME} ${PROJ_LIBRARIES} ${OPENGL_LIBRARIES})

##COMMENT
#install(TARGET ${PROJ_NAME} ${PROJ_INCLUDES} includes)##
##

### ---- Test Executable ---- ###

LINK_DIRECTORIES(${ADON_LIBRARY})

FILE(GLOB HEAD ${PROJ_TEST}/*.h)
FILE(GLOB SRCS ${PROJ_TEST}/*.cc)
LIST(APPEND SRCSMAIN ${HEAD} ${SRCS})
SOURCE_GROUP(Main FILES ${SRCSMAIN})

FILE(GLOB HEADGRAPH ${PROJ_GRAPHICS_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSGRAPHICSMAIN ${HEADGRAPH})
SOURCE_GROUP(Graphics FILES ${SRCSGRAPHICSMAIN})

FILE(GLOB HEADNETWORK ${PROJ_NETWORK_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSNETWORKSMAIN ${HEADNETWORK})
SOURCE_GROUP(Network FILES ${SRCSNETWORKSMAIN})

LIST(APPEND ALLSRCSMAIN ${SRCSMAIN} ${SRCSGRAPHICSMAIN} ${SRCSNETWORKSMAIN})

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${ALLSRCSMAIN})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${ADON_LIBRARY} ${OPENGL_LIBRARIES})


install(
	TARGETS ${PROJ_NAME}
	RUNTIME DESTINATION ${LIB_DESTINATION}
	ARCHIVE DESTINATION ${LIB_DESTINATION}
	LIBRARY DESTINATION ${LIB_DESTINATION})