cmake_minimum_required(VERSION 2.8)

SET(PROJ_NAME "AdonEngine")

SET(PROJ_PATH ${CMAKE_SOURCE_DIR})
SET(PROJ_OUT_PATH ${CMAKE_BINARY_DIR})

SET(PROJ_ECS_INCLUDE_PATH ${PROJ_PATH}/include/ECS)
SET(PROJ_ECS_SOURCE_PATH ${PROJ_PATH}/src/ECS)
SET(PROJ_MESSAGING_INCLUDE_PATH ${PROJ_PATH}/include/Messaging)
SET(PROJ_MESSAGING_SOURCE_PATH ${PROJ_PATH}/src/Messaging)
SET(PROJ_MATH_INCLUDE_PATH ${PROJ_PATH}/include/Math)
SET(PROJ_GUI_INCLUDE_PATH ${PROJ_PATH}/include/GUI)
SET(PROJ_GUI_SRC_PATH ${PROJ_PATH}/src/GUI)
SET(PROJ_APPLICATION_INCLUDE_PATH ${PROJ_PATH}/include/Application)
SET(PROJ_APPLICATION_SRC_PATH ${PROJ_PATH}/src/Application)
SET(PROJ_ADON_INCLUDE_PATH ${PROJ_PATH}/include)
SET(LIB_DESTINATION ${PROJ_PATH}/lib)

SET(PROJ_INCLUDES "deps/GLEW" "deps/GLFW" "include" "include/ECS" "include/Messaging" "include/Math" "include/GUI" "include/Application")

SET(PROJ_LIBRARIES ${PROJ_PATH}/lib/glew32s.lib ${PROJ_PATH}/lib/glfw3.lib)
SET(PROJ_LIBRARYINCLUDE_PATH ${PROJ_PATH}/deps/GLEW ${PROJ_PATH}/deps/GLFW)
SET(ADON_LIBRARY ${PROJ_PATH}/lib/AdonEngine.lib)

SET(GLFW_LIB ${PROJ_PATH}/lib/glfw3.lib)
SET(GLEW_LIB ${PROJ_PATH}/lib/glew32s.lib)

FIND_PACKAGE(OpenGL)

#///////////////////////////// Adon Engine //////////////////////////////////////////////

project(${PROJ_NAME})

INCLUDE_DIRECTORIES(${PROJ_INCLUDES})
LINK_DIRECTORIES(${LIB_DESTINATION})

FILE(GLOB SRC ${PROJ_ECS_SOURCE_PATH}/*.cc)
FILE(GLOB HEAD ${PROJ_ECS_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSECS ${SRC} ${HEAD})
SOURCE_GROUP(EntityComponentSystem FILES ${SRCSECS})

FILE(GLOB SRCMES ${PROJ_MESSAGING_SOURCE_PATH}/*.cc)
FILE(GLOB HEADMES ${PROJ_MESSAGING_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSMESSAGING ${SRCMES} ${HEADMES})
SOURCE_GROUP(Messaging FILES ${SRCSMESSAGING})

FILE(GLOB HEADMATH ${PROJ_MATH_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSMATH ${HEADMATH})
SOURCE_GROUP(Math FILES ${SRCSMATH})

FILE(GLOB HEADGUI ${PROJ_GUI_INCLUDE_PATH}/*.h)
FILE(GLOB SRCGUI ${PROJ_GUI_SRC_PATH}/*.cc)
LIST(APPEND SRCSGUI ${HEADGUI} ${SRCGUI})
SOURCE_GROUP(GUI FILES ${SRCSGUI})

FILE(GLOB HEADAPP ${PROJ_APPLICATION_INCLUDE_PATH}/*.h)
FILE(GLOB SRCAPP ${PROJ_APPLICATION_SRC_PATH}/*.cc)
LIST(APPEND SRCSAPP ${HEADAPP} ${SRCAPP})
SOURCE_GROUP(APP FILES ${SRCSAPP})

FILE(GLOB HEADADON ${PROJ_ADON_INCLUDE_PATH}/*.h)
LIST(APPEND SRCSADON ${HEADADON})
SOURCE_GROUP(AdonInclude FILES ${SRCSADON})

LIST(APPEND ALLSRCS ${SRCSECS} ${SRCSMESSAGING} ${SRCSMATH} ${SRCSADON} ${SRCSGUI} ${SRCSAPP})

add_library(${PROJ_NAME} ${ALLSRCS})

SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES LINKER_LANGUAGE C++)

TARGET_LINK_LIBRARIES(${PROJ_NAME} ${PROJ_LIBRARIES} ${OPENGL_LIBRARIES})

install(
	TARGETS ${PROJ_NAME}
	RUNTIME DESTINATION ${LIB_DESTINATION}
	ARCHIVE DESTINATION ${LIB_DESTINATION}
	LIBRARY DESTINATION ${LIB_DESTINATION})